adicionei o link para o site google

--- a/bloco3.1/bloco_3/dia_1/<!DOCTYPE html>.html
+++ b/bloco3.1/bloco_3/dia_1/<!DOCTYPE html>.html
@@ -17,10 +17,14 @@
         <img src="trybe_logo.png" alt="logo da trybe" width="100pix">
 
     </ul> 
+   
         <p id="ana"> Primeira pessoa Ana de São Lourenço</p>
         <p id="luis">Segunda pessoa Luis de São Lourenço</p>
         <p id="joao">Terceira pessoa Joao de Belo Horizonte</p>
         <p id="flavio"> Quarta pessoa Flavio do Rio de Janeiro</p>
         <p id="jonathan"> Quinta pessoa Jonathan de São Paulo</p>
+
+      <a href="https://www.google.com.br/">Site do Google</a>
+
   </body>
 </html>
