adicionei algumas alteraçoes nos paragrafos

--- a/bloco3.1/bloco_3/dia_1/<!DOCTYPE html>.html
+++ b/bloco3.1/bloco_3/dia_1/<!DOCTYPE html>.html
@@ -18,11 +18,11 @@
 
     </ul> 
    
-        <p id="ana"> Primeira pessoa Ana de São Lourenço</p>
-        <p id="luis">Segunda pessoa Luis de São Lourenço</p>
-        <p id="joao">Terceira pessoa Joao de Belo Horizonte</p>
-        <p id="flavio"> Quarta pessoa Flavio do Rio de Janeiro</p>
-        <p id="jonathan"> Quinta pessoa Jonathan de São Paulo</p>
+        <p id="ana"> A primeira pessoa Ana é de São Lourenço</p>
+        <p id="luis">A segunda pessoa Luis é de São Lourenço</p>
+        <p id="joao">A terceira pessoa Joao é de Belo Horizonte</p>
+        <p id="flavio">A quarta pessoa Flavio é do Rio de Janeiro</p>
+        <p id="jonathan">A quinta pessoa Jonathan é de São Paulo</p>
 
       <a href="https://www.google.com.br/">Site do Google</a>
 
