--- a/bloco_3/dia_2/exercicio aula 3.2.html
+++ b/bloco_3/dia_2/exercicio aula 3.2.html
@@ -7,14 +7,20 @@
         h1 {
             font-size:65px;
             color: orange;
+            font-family: sans-serif;
         }
         ul{
             background-color: orangered;
         }
         .alteracor{
-            background-color: palegoldenrod;
+            background-color: rgb(247, 236, 115);
         }
-
+        p{
+            font-weight: 600;
+        }
+        body{
+            font-size: 16px;
+        }
     </style>
   </head>
   <body>
