--- a/bloco_3/dia_2/exercicio aula 3.2.html
+++ b/bloco_3/dia_2/exercicio aula 3.2.html
@@ -11,15 +11,30 @@
         }
         ul{
             background-color: orangered;
+            font-style: italic;
+            line-height: normal;
+            text-decoration: underline;
+            text-align: center;
+            font-size: 2em;
         }
         .alteracor{
             background-color: rgb(247, 236, 115);
         }
         p{
             font-weight: 600;
+            font-size: 3em;
         }
         body{
             font-size: 16px;
+        }
+        #amarelo{
+            background-color: yellow;
+        }
+        #vermelho{
+            background-color: red;
+        }
+        #marrom{
+            background-color: saddlebrown;
         }
     </style>
   </head>
@@ -27,9 +42,9 @@
     <h1>Exercícios 3.2 </h1>
     <p class="alteracor">Qual é a sua cor favorita?</p>
     <ul class="alteracor">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
