--- a/bloco_3/dia_3/index3.html
+++ b/bloco_3/dia_3/index3.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
       <p>Top 3 dos melhores sites que existem na web</p>
+    <div class="lista">
       <ol>
         <li>Globo.com</li>
         <li>Uol.com.br</li>
         <li>Twitter</li>
       </ol>
+    </div>
       <p>Principais motivos para eu gostar deles</p>
       <ul>
         <li>Diposição</li>
