--- a/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/index.html
+++ b/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/index.html
@@ -10,5 +10,10 @@
     <header> 
       <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
+    <nav>
+      <h2>Página Inicial.</h2>
+      <h2>Sobre.</h2>
+      <h2>Contato.</h2>
+    </nav>
   </body>
 </html>
