--- a/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/index.html
+++ b/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/index.html
@@ -11,9 +11,29 @@
       <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
     <nav>
-      <h2>Página Inicial.</h2>
-      <h2>Sobre.</h2>
-      <h2>Contato.</h2>
+      <ul>
+        <li>Página Inicial.</li>
+        <li>Sobre.</li>
+        <li>Contato.</li>
+      </ul>
     </nav>
+    <article>
+      <h2 class="fatos">Fatos sobre o Stomatopoda</h2>
+      <section>
+        <h3 class="italico">Odontodactylus scyllarush3</h3>
+        <p class="reino">Reino:	Animalia
+          Filo:	Arthropoda.
+          Subfilo:	Crustacea.
+          Classe:	Malacostraca.
+          Subclasse:	Hoplocarida.
+          Ordem:	Stomatopoda.
+          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Odontodactylus_scyllarus1.jpg" alt="foto" width="200px">
+        </p>
+      <section class="descriçao">
+        <h3>Descrição</h3>
+        <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores. Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. O urópodo, quando aberto, também funciona para defesa, como um escudo, fechando a galeria em que o animal esteja instalado. A fêmea desova no local onde se abriga e, em caso de perigo, enrola os ovos como uma bola, prendendo-os junto ao corpo até encontrar um abrigo mais protegido.</p>
+      </section>
+      </section>
+    </article>
   </body>
 </html>
