--- a/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/index.html
+++ b/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pr-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
+    <title>Stomatopoda</title>
     <style> </style>
   </head>
   <body>
